--- a/src/components/CourseItemDetails/index.css
+++ b/src/components/CourseItemDetails/index.css
@@ -1,41 +1,56 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
-.details-container {
-  display: flex;
-  width: 100%;
+
+@media screen and (min-width: 768px) {
+  .details-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-top: 90px;
+    background-color: #ffffff;
+    box-shadow: 2px 1px 0px #e8e8e8;
+  }
 }
-.image {
-  height: 100%;
-  width: 50%;
+
+@media screen and (min-width: 768px) {
+  .image {
+    height: 100%;
+    width: 30%;
+  }
 }
-.text-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .text-container {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
-.heading {
-  font-family: 'Roboto';
-  font-size: 19px;
-  font-weight: 500;
-  color: #1e293b;
-}
+
 @media screen and (min-width: 768px) {
   .heading {
     font-size: 25px;
+    font-family: 'Roboto';
+
+    font-weight: 500;
+    color: #1e293b;
   }
 }
-.description {
-  font-family: 'Roboto';
-  font-size: 18px;
-  font-weight: 300;
-  color: #64748b;
-}
+
 @media screen and (min-width: 768px) {
   .description {
-    font-size: 24px;
+    font-size: 22px;
+    font-family: 'Roboto';
+    font-weight: 300;
+    color: #64748b;
   }
 }
