--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,25 +1,29 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-}
-.heading {
-  font-family: 'Roboto';
-  font-size: 19px;
-  font-weight: bold;
-  color: #1e293b;
-}
 @media screen and (min-width: 768px) {
-  .heading {
-    font-size: 28px;
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
   }
 }
-.courses-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 36px;
+    margin: 60px;
+    color: #1e293b;
+    font-family: 'Roboto';
+    font-weight: bold;
+    align-self: flex-start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .courses-list {
+    display: flex;
+
+    flex-wrap: wrap;
+    width: 100%;
+  }
 }
