--- a/src/components/CourseItem/index.css
+++ b/src/components/CourseItem/index.css
@@ -1,30 +1,23 @@
-.each-course {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-right: 10px;
-}
-.image {
-  height: 100px;
-  width: 130px;
-}
 @media screen and (min-width: 768px) {
-  .image {
-    height: 160px;
-    width: 150px;
+  .each-course {
+    display: flex;
+    margin: 30px;
+    list-style-type: none;
   }
 }
-.name{
-    font-family: "Roboto";
-    font-size: 18px;
-    color:#1e293b;
+
+@media screen and (min-width: 768px) {
+  .name {
+    font-size: 24px;
+    font-family: 'Roboto';
+    color: #1e293b;
     font-weight: 400;
+    margin-left: 20px;
+  }
 }
 @media screen and (min-width: 768px) {
-    .name{
-        font-size: 24px;
-    }
-}
-.link{
+  .link {
     text-decoration: none;
+    cursor: pointer;
+  }
 }
