--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,25 +1,20 @@
-.nav {
-  background-color: #f1f5f9;
-  width: 100%;
-  height: 300px;
-}
 @media screen and (min-width: 768px) {
   .nav {
-    height: 500px;
+    height: 100px;
+    background-color: #f1f5f9;
+    width: 100%;
   }
 }
-.logo {
-  margin-left: 40px;
-  height: 90px;
-  width: 120px;
-}
+
 @media screen and (min-width: 768px) {
   .logo {
-    height: 130px;
-    width: 180px;
+    height: 90px;
+    width: 100px;
     margin-left: 80px;
   }
 }
-.link {
-  text-decoration: none;
+@media screen and (min-width: 768px) {
+  .link {
+    text-decoration: none;
+  }
 }
